Adding all files to image as war is not getting created in openshift

--- a/FreahVotes/src/main/resources/application.properties
+++ b/FreahVotes/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.thymeleaf.cache=false
 
 # Uncomment the following to use memory DB
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:freshvotes
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
