--- a/FreahVotes/pom.xml
+++ b/FreahVotes/pom.xml
@@ -83,7 +83,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-
+		<finalName>alansfreshvotes</finalName>
 	</build>
 
 
