--- a/FreahVotes/src/main/resources/application.properties
+++ b/FreahVotes/src/main/resources/application.properties
@@ -1,21 +1,27 @@
 # Uncomment the following to use the mysql db
-#spring.datasource.url= jdbc:mysql://mysql:3306/freshvotes?useSSL=false
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=Password1
+spring.datasource.url= jdbc:mysql://localhost:3306/freshvotes?useSSL=false
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
 #
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+# end of commented section
+
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.cache=false
 
 # Uncomment the following to use memory DB
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # spring.jackson.serialization.fail-on-empty-beans=false
+
+# end of commented section
