--- a/FreahVotes/src/main/resources/application.properties
+++ b/FreahVotes/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Uncomment the following to use the mysql db
-spring.datasource.url= jdbc:mysql://localhost:3306/freshvotes?useSSL=false
+spring.datasource.url= jdbc:mysql://alansmysql:3306/freshvotes?useSSL=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
