Updated application.setting to set base url to /alansfreshvotes

--- a/FreahVotes/src/main/resources/application.properties
+++ b/FreahVotes/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.cache=false
 
+server.servlet.context-path=/alansfreshvotes
+
 # Uncomment the following to use memory DB
 
 #spring.h2.console.enabled=true
